tests/ui/feature-gates/feature-gate-macro-metavar-expr-dollar-dollar-crate.stderr
error[E0658]: the `$$crate` meta-variable expression is unstable
  --> $DIR/feature-gate-macro-metavar-expr-dollar-dollar-crate.rs:8:19
   |
LL |                 $$crate
   |                   ^^^^^
   |
   = note: see issue #155111 <https://github.com/rust-lang/rust/issues/155111> for more information
   = help: add `#![feature(macro_metavar_expr_dollar_dollar_crate)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: expected expression, found `$`
  --> $DIR/feature-gate-macro-metavar-expr-dollar-dollar-crate.rs:17:29
   |
LL |         const _FOO: usize = $d$d crate::IDX;
   |                             ^^ expected expression

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
